# ProgFlow

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  SESSION_PROMPT.md  todo.md
.github/workflows/: build.yml
Source/: Main.cpp  MainWindow.cpp  MainWindow.h
Source/Audio/: AudioClip.cpp  AudioClip.h  AudioEngine.cpp  AudioEngine.h  AudioFileLoader.cpp  AudioFileLoader.h  AutomationLane.cpp  AutomationLane.h  AutomationRecorder.cpp  AutomationRecorder.h  MarkerTrack.cpp  MarkerTrack.h  MidiClip.cpp  MidiClip.h  PluginHost.cpp  PluginHost.h  TempoTrack.cpp  TempoTrack.h  TimeSignatureTrack.cpp  TimeSignatureTrack.h  TimeStretchProcessor.cpp  TimeStretchProcessor.h  Track.cpp  Track.h  TransportEngine.cpp  TransportEngine.h
Source/Audio/Effects/: AmpSimulatorEffect.cpp  AmpSimulatorEffect.h  BitcrusherEffect.cpp  BitcrusherEffect.h  CabinetEffect.cpp  CabinetEffect.h  ChorusEffect.cpp  ChorusEffect.h  CompressorEffect.cpp  CompressorEffect.h  DelayEffect.cpp  DelayEffect.h  DistortionEffect.cpp  DistortionEffect.h  EQEffect.cpp  EQEffect.h  EffectBase.cpp  EffectBase.h  EffectChain.cpp  EffectChain.h  FilterEffect.cpp  FilterEffect.h  FlangerEffect.cpp  FlangerEffect.h  GateEffect.cpp  GateEffect.h  LimiterEffect.cpp  LimiterEffect.h  PhaserEffect.cpp  PhaserEffect.h  ReverbEffect.cpp  ReverbEffect.h  SidechainCompressorEffect.cpp  SidechainCompressorEffect.h  TremoloEffect.cpp  TremoloEffect.h
Source/Audio/Synths/: AnalogSynth.cpp  AnalogSynth.h  DrumSynth.cpp  DrumSynth.h  FMSynth.cpp  FMSynth.h  OrganSynth.cpp  OrganSynth.h  PolyPadSynth.cpp  PolyPadSynth.h  Sampler.cpp  Sampler.h  SoundFontPlayer.cpp  SoundFontPlayer.h  StringSynth.cpp  StringSynth.h  SynthBase.cpp  SynthBase.h  SynthFactory.cpp  SynthFactory.h  SynthVoice.cpp  SynthVoice.h
Source/Audio/Synths/ProSynth/: ModMatrix.cpp  ModMatrix.h  NoiseGenerator.cpp  NoiseGenerator.h  ProSynth.cpp  ProSynth.h  ProSynthFilter.cpp  ProSynthFilter.h  ProSynthLFO.cpp  ProSynthLFO.h  ProSynthParams.cpp  SubOscillator.cpp  SubOscillator.h  UnisonEngine.cpp  UnisonEngine.h  WavetableOsc.cpp  WavetableOsc.h
Source/Core/: UndoManager.cpp  UndoManager.h  UndoableAction.h
Source/Core/Actions/: AutomationActions.h  ClipActions.h  NoteActions.h  TrackActions.cpp  TrackActions.h
Source/MIDI/: MidiLearnManager.cpp  MidiLearnManager.h
Source/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Project/: AudioExporter.cpp  AudioExporter.h  PreferencesManager.cpp  PreferencesManager.h  ProjectManager.cpp  ProjectManager.h  ProjectSerializer.cpp  ProjectSerializer.h
Source/UI/: LookAndFeel.cpp  LookAndFeel.h  ToastManager.cpp  ToastManager.h  TransportBar.cpp  TransportBar.h  VirtualKeyboardPanel.cpp  VirtualKeyboardPanel.h  WelcomeScreen.cpp  WelcomeScreen.h
Source/UI/Common/: CardPanel.cpp  CardPanel.h  EnvelopeVisualizer.cpp  EnvelopeVisualizer.h  GlassPanel.cpp  GlassPanel.h  ResizablePanel.cpp  ResizablePanel.h  RotaryKnob.cpp  RotaryKnob.h  SectionPanel.cpp  SectionPanel.h  VerticalMeter.cpp  VerticalMeter.h  WaveSelector.cpp  WaveSelector.h
Source/UI/Dialogs/: ExportDialog.cpp  ExportDialog.h  PreferencesDialog.cpp  PreferencesDialog.h
Source/UI/Effects/: EffectChainPanel.cpp  EffectChainPanel.h  EffectSlot.cpp  EffectSlot.h
Source/UI/Mixer/: ChannelStrip.cpp  ChannelStrip.h  MixerPanel.cpp  MixerPanel.h
Source/UI/PianoRoll/: NoteGridComponent.cpp  NoteGridComponent.h  PianoKeyboard.cpp  PianoKeyboard.h  PianoRollEditor.cpp  PianoRollEditor.h  VelocityLane.cpp  VelocityLane.h
Source/UI/Plugins/: PluginBrowserPanel.cpp  PluginBrowserPanel.h  PluginEditorWindow.cpp  PluginEditorWindow.h
Source/UI/Synths/: AnalogSynthEditor.cpp  AnalogSynthEditor.h  DrumSynthEditor.cpp  DrumSynthEditor.h  FMSynthEditor.cpp  FMSynthEditor.h  OrganSynthEditor.cpp  OrganSynthEditor.h  PolyPadSynthEditor.cpp  PolyPadSynthEditor.h  ProSynthEditor.cpp  ProSynthEditor.h  SamplerEditor.cpp  SamplerEditor.h  SoundFontPlayerEditor.cpp  SoundFontPlayerEditor.h  StringSynthEditor.cpp  StringSynthEditor.h  SynthEditorBase.cpp  SynthEditorBase.h
Source/UI/Timeline/: AudioClipComponent.cpp  AudioClipComponent.h  AutomationLaneComponent.cpp  AutomationLaneComponent.h  ClipComponent.cpp  ClipComponent.h  PlayheadComponent.cpp  PlayheadComponent.h  TimeRuler.cpp  TimeRuler.h  TimelinePanel.cpp  TimelinePanel.h  TrackLane.cpp  TrackLane.h  WaveformComponent.cpp  WaveformComponent.h
Source/UI/Tracks/: TrackHeader.cpp  TrackHeader.h  TrackHeaderPanel.cpp  TrackHeaderPanel.h
Source/Utils/: PerformanceProfiler.h  SIMDUtils.h
Tests/: ArrangementTests.cpp  AudioClipTests.cpp  AutomationLaneTests.cpp  DSPTests.cpp  DrumSynthTests.cpp  IntegrationTests.cpp  SoundFontPlayerTests.cpp  StressTests.cpp  TestRunner.cpp
docs/: IMPROVEMENT_PLAN.md  UI_POLISH_RECOMMENDATIONS.md
docs/plans/: 2026-01-18-automation-system-design.md  2026-01-18-j8-project-save-load-design.md  2026-01-20-saturn-ui-redesign.md  2026-01-20-ui-modern-design.md  2026-01-20-ui-polish-design.md  2026-01-20-ui-redesign-implementation.md  2026-01-20-ui-redesign.md
packaging/: package-linux.sh  package-macos.sh  package-windows.ps1
